--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,21 @@
 
   <body>
     <div>
-      <%= flash[:notice] %>
-    </div>
-    <div>
       <a href="/">Home</a>
-      <%#= button_to "Logout", "/sessions/logout", method: :delete %>
-      <a href="/sessions/new">Login</a>
-      <a href="/users/new">Signup</a>
+    </div>
+    
+    <div>
+      <% if @current_user %>
+        Welcome <%= @current_user.first_name %>
+        <%= button_to "Logout", "/sessions/logout", method: :delete %>
+      <% else %>
+        <a href="/sessions/new">Login</a> or
+        <a href="/users/new">Sign Up</a>
+      <% end %>
+    </div>
+
+    <div>
+      <%= flash[:notice] %>
     </div>
 
     <%= yield %>
