--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     
     <div>
       <% if @current_user %>
-        Welcome <%= @current_user.first_name %>
+        Welcome <%= @current_user.username %>
         <%= button_to "Logout", "/sessions/logout", method: :delete %>
       <% else %>
         <a href="/sessions/new">Login</a> or
