--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,20 @@
 <h1>New Post</h1>
 
 <%= form_with model: @post do |form| %>
-  <p>
+  <div class="mb-3">
     <%= form.label "title" %>
     <%= form.text_field "title" %>
-  </p>
-  <p>
+  </div>
+  <div class="mb-3">
     <%= form.label "description" %>
     <%= form.text_field "description" %>
-  </p>
-  <p>
+  </div>
+  <div class="mb-3">
     <%= form.label "posted_on" %>
     <%= form.date_field "posted_on" %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
+  </div>
+  <div>
+    <%= form.submit "Submit", class: "btn btn-primary" %>
+  </div>
   <%= form.hidden_field "place_id" %>
 <% end %>
